@@ -61,6 +61,9 @@
    - markus@cvs.openbsd.org 2003/09/19 11:31:33
      [channels.c]
      do not call channel_free_all on fatal; ok deraadt
+   - markus@cvs.openbsd.org 2003/09/19 11:33:09
+     [packet.c sshd.c]
+     do not call packet_close on fatal; ok deraadt
 
 20030919
  - (djm) Bug #683: Remove reference to --with-ipv4-default from INSTALL;
@@ -1197,4 +1200,4 @@
  - Fix sshd BindAddress and -b options for systems using fake-getaddrinfo.
    Report from murple@murple.net, diagnosis from dtucker@zip.com.au
 
-$Id: ChangeLog,v 1.3033 2003/09/22 11:12:56 dtucker Exp $
+$Id: ChangeLog,v 1.3034 2003/09/22 11:13:59 dtucker Exp $
